update color and resource string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Hyper-C</string>
+    <string name="appDetail">Solution for controlling and monitoring Hypertension</string>
+    <string name="welcomeTo">Welcome To</string>
+    <string name="loginAs">Login As</string>
+    <string name="loginAsDoctor">Login as doctor</string>
+    <string name="login">Login</string>
+    <string name="loginAsPatient">Login as patient</string>
+    <string name="appDescription">Hyper-C is an application for monitoring or controlling hypertension patients which is handled directly by a doctor</string>
+    <string name="developBy">Develop by F4Tech Team</string>
+    <string name="welcomeBack">Welcome Back</string>
+    <string name="email">Email</string>
+    <string name="fullName">Full Name</string>
+    <string name="forgotPassword">Forgot Password?</string>
+    <string name="dontHaveAccount">Don\'t have an account? Sign Up</string>
+    <string name="alreadyHaveAccount">Already have an account? Login</string>
+    <string name="signup">Sign Up</string>
+    <string name="title_activity_bottom_nav">BottomNavActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
