--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,15 @@
     <string name="signup">Sign Up</string>
     <string name="title_activity_bottom_nav">BottomNavActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_schedule">Schedule</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_tips">Tips</string>
+    <string name="hello">Hello,</string>
+    <string name="usernameDummy">Barry Allen</string>
+    <string name="useremailDummy">barryallen@starlabs.com</string>
+    <string name="text_havenot_take_medicin">You haven\'t taken medication, \ntake medicine now then tell your doctor</string>
+    <string name="text_tell_doctor">Tell Doctor</string>
+    <string name="text_daily_review">Daily Review</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
