--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hyper-C</string>
+    <string name="app_name">HytenC Patient</string>
     <string name="appDetail">Solution for controlling and monitoring Hypertension</string>
     <string name="welcomeTo">Welcome To</string>
     <string name="login">Login</string>
@@ -14,15 +14,20 @@
     <string name="signup">Sign Up</string>
     <string name="title_activity_bottom_nav">BottomNavActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_schedule">Schedule</string>
+    <string name="title_schedule">Jadwal</string>
     <string name="title_settings">Settings</string>
     <string name="title_tips">Tips</string>
+    <string name="title_medical_record">Rekam Medis</string>
     <string name="hello">Hello,</string>
     <string name="usernameDummy">Barry Allen</string>
     <string name="useremailDummy">barryallen@starlabs.com</string>
-    <string name="text_havenot_take_medicin">You haven\'t taken medication, \ntake medicine now then tell your doctor</string>
-    <string name="text_tell_doctor">Tell Doctor</string>
-    <string name="text_daily_review">Daily Review</string>
+    <string name="text_havenot_take_medicin">Kamu belum minum obat, \nminum obat dulu lalu beritahu pengawas</string>
+    <string name="text_havenot_take_medicin2">Kamu belum minum obat, minum obat dulu lalu beritahu pengawas</string>
+    <string name="text_have_take_medicin">Yeay! \nkamu sudah minum obat, \njangan lupa minum obat selanjutnya yaa.</string>
+    <string name="text_tell_doctor">Sudah</string>
+    <string name="text_daily_review">Tips</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lorem_ipsum">Lorem Ipsum</string>
+    <string name="activate_notification">Aktifkan Notifikasi</string>
+    <string name="notity_when_the_time">dapatkan notifikasi jika sudah jadwalnya minum obat</string>
 </resources>
