update alarm recevier, add update banner base on medicine state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="text_havenot_take_medicin">Kamu belum minum obat, \nminum obat dulu lalu beritahu pengawas</string>
     <string name="text_havenot_take_medicin2">Kamu belum minum obat, minum obat dulu lalu beritahu pengawas</string>
     <string name="text_have_take_medicin">Yeay! \nkamu sudah minum obat, \njangan lupa minum obat selanjutnya yaa.</string>
-    <string name="text_state_init">Kamu belum punya jadwal minum obat nih, \ntunggu sampai dokter membuat jadwal yaa.</string>
+    <string name="text_state_init">Tetap semangat ya! \njalani gaya hidup sehat. measures your blood pressure, control it, and live longer</string>
     <string name="text_tell_doctor">Sudah</string>
     <string name="text_daily_review">Tips</string>
     <!-- TODO: Remove or change this placeholder text -->
